--- a/Bowling/Bowling.csproj
+++ b/Bowling/Bowling.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BowlingGameTests.cs" />
     <Compile Include="DOF\Frame.cs" />
     <Compile Include="DOF\Game.cs" />
+    <Compile Include="DOF\GameProgress.cs" />
     <Compile Include="DOF\Scorer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
