--- a/Bowling.App/Bowling.App.csproj
+++ b/Bowling.App/Bowling.App.csproj
@@ -46,14 +46,11 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="UpdateControls">
-      <HintPath>..\packages\UpdateControls.2.3.0.4\lib\net45\UpdateControls.dll</HintPath>
+    <Reference Include="UpdateControls, Version=2.3.0.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <HintPath>..\packages\UpdateControls.2.3.2.1\lib\net45\UpdateControls.dll</HintPath>
     </Reference>
-    <Reference Include="UpdateControls.Forms">
-      <HintPath>..\packages\UpdateControls.2.3.0.4\lib\net45\UpdateControls.Forms.dll</HintPath>
-    </Reference>
-    <Reference Include="UpdateControls.XAML">
-      <HintPath>..\packages\UpdateControls.2.3.0.4\lib\net45\UpdateControls.XAML.dll</HintPath>
+    <Reference Include="UpdateControls.XAML, Version=2.3.0.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <HintPath>..\packages\UpdateControls.2.3.2.1\lib\net45\UpdateControls.XAML.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
