--- a/Bowling.Portable/Bowling.Portable.csproj
+++ b/Bowling.Portable/Bowling.Portable.csproj
@@ -86,8 +86,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="UpdateControls">
-      <HintPath>..\packages\UpdateControls.2.3.0.4\lib\portable-net45+sl50+wp80+win\UpdateControls.dll</HintPath>
+    <Reference Include="UpdateControls, Version=2.3.0.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <HintPath>..\packages\UpdateControls.2.3.2.1\lib\portable-net45+sl50+wp80+win80\UpdateControls.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
